# jafar_robo

./: .gitignore  README.md  command_list.md  commands.md  green_plan.md
install/ack_control/include/ack_control/: ack_hardware.hpp
install/ack_control/share/ack_control/: ack_control.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/control/share/control/: local_setup.sh  package.sh
install/description/share/description/: local_setup.sh  package.sh  package.xml
launch/: green_follow_launch.py
log/: latest_build
src/ack_control/: CMakeLists.txt  ack_control.xml
src/ack_control/description/: deep.urdf.xacro
src/ack_control/include/ack_control/: ack_hardware.hpp
src/ack_control/install/: local_setup.sh  setup.sh
src/ack_control/install/ack_control/share/ack_control/: local_setup.sh  package.dsv  package.sh
src/ack_control/install/ack_control/share/ament_index/resource_index/parent_prefix_path/: ack_control
src/ack_control/launch/: bringup.launch.py
src/ack_control/log/: latest_build
src/ack_control/src/: ack_hardware.cpp
src/autonomy/: setup.py
src/autonomy/autonomy/: wall_nav_node.py
src/green_control/green_control/: green_control.py
src/green_vision/config/: rgb_config.yaml
src/green_vision/green_vision/: green_vision.py
src/log/: latest_build
src/perception/: README.md  package.xml  setup.py
src/perception/perception/: depth_node.py  rgb_node.py
src/py_Controller/: package.xml  setup.cfg  setup.py
src/rs_stream/rs_stream/: rs_stream_node.py
(+305 files in other folders)
